src/components/Job/Job.scss
@import '../../styles/mixin';
@import '../../styles/variables';

.job {
  @include flex(row, center);
  margin-bottom: 1rem;

  .job-item {
    @include flex(column, space-around);
    width: 500px;
    min-width: 400px;
    height: 160px;
    background-color: $neon-02-23-hex;
    border-radius: 20px;
    cursor: pointer;
    position: relative;
    transition: all 0.2s ease;

    &:hover {
      background-color: #12151f;
    }

    .job-item__icon {
      position: absolute;
      right: 5%;
      top: 5%;
      @include flex(row, space-between);
      width: 90%;
      height: 30%;
      cursor: pointer;

      .job-item__icon-icon {
        color: white;
        height: 20px;
        letter-spacing: 0.1rem;
        transition: 0.2s ease;
        position: absolute;
        right: 0;
        &:hover {
          color: rgb(22, 177, 22);
        }
      }
    }
    .job-item__details {
      @include flex(column, center);
      width: 55%;
      height: 40%;
      margin-top: 1.5rem;

      .job-item__details-info {
        margin-bottom: 0.3rem;
      }

      .company {
        color: white;
        letter-spacing: 0.1rem;
        font-size: 2rem;
        font-weight: 900;
        text-transform: capitalize;
        margin-bottom: 1.5rem;
      }
      .job-title {
        color: white;
        letter-spacing: 0.2rem;
        font-size: 1.25rem;
        text-transform: uppercase;
      }
    }
  }

  .job-item__delete {
    background-color: crimson;
    border-radius: 20px;
    height: 160px;
    width: 125px;
    @include flex(column, center);
    margin-left: 1rem;
    cursor: pointer;
    transition: background-color 0.2s ease;
    &:hover {
      background-color: rgb(179, 0, 36);
    }
  }
}

